<resources>
    <string name="app_name">HackOhio2019</string>

    //activity_signup_page resources
    {
        <string name="activity_sign_up_page_banner">Sign Up</string>
        <string name="activity_sign_up_page_description">Please fill in the following required fields.</string>
        <string name="activity_sign_up_page_lastname_text">Last name</string>
        <string name="activity_sign_up_page_lastname_input">Enter last name</string>
        <string name="activity_sign_up_page_firstname_text">First name</string>
        <string name="activity_sign_up_page_firstname_input">Enter first name</string>
        <string name="activity_sign_up_page_DOB_text">Date of birth</string>
        <string name="activity_sign_up_page_DOB_input">MM/DD/YYYY</string>
        <string name="activity_sign_up_page_policyNum_text">Policy number</string>
        <string name="activity_sign_up_page_policyNum_input">ABCD-123456</string>
        <string name="activity_sign_up_enter_email_text">Email</string>
        <string name="activity_sign_up_enter_email_input">Enter email</string>
        <string name="activity_sign_up_enter_password_text">Password</string>
        <string name="activity_sign_up_enter_password_input">Enter password</string>
        <string name="activity_sign_up_repeat_password_text">Repeat Password</string>
        <string name="activity_sign_up_repeat_password_input">Repeat Password</string>
        <string name="activity_sign_up_signup_button">Sign Up</string>
        <string name="activity_sign_up_cancel_button">Cancel</string>
    }
    //activity_login_page resources
    {
        <string name="activity_login_page_banner">Log In to Your Account</string>
        <string name="activity_login_page_username">Username:</string>
        <string name="activity_login_page_username_hint">Username</string>
        <string name="activity_login_page_password">Password:</string>
        <string name="activity_login_page_password_hint">Password</string>
        <string name="activity_login_page_forgot_password">Forgot password?</string>
        <string name="activity_login_page_login_button">Log in</string>
        <string name="activity_login_page_signup_button">Need an account? Sign up</string>
    }
</resources>